--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -5,7 +5,7 @@
             <input type="text" name="cheading" class="com_form" placeholder="Heading"><br>
             <textarea name="cjournal" cols="30" rows="10" class="com_form"
                 placeholder="Write Your Journal Here."></textarea><br>
-            <button type="submit" class="com_form">Submit</button>
+            <button type="submit" class="com_form">Publish</button>
         </form>
     </div>
 
