--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,4 +1,9 @@
 <%- include("header") -%>
-    <h1>Contact us</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus odit saepe nisi voluptatum ut, atque quae
-        labore dicta quasi rerum quia accusantium tempore sed iste. Vero voluptate magnam quos temporibus?</p>
+    <div class="pages">
+        <h1 class="jheading">Contact us</h1>
+        <p class="jrnl">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus odit saepe nisi voluptatum ut,
+            atque quae
+            labore dicta quasi rerum quia accusantium tempore sed iste. Vero voluptate magnam quos temporibus?</p>
+    </div>
+
+    <%- include("footer") -%>
