--- a/views/list.ejs
+++ b/views/list.ejs
@@ -11,35 +11,23 @@
 <body>
     <%- include("header") -%>
         <% for (var i=0; i<headings.length; i++){ %>
-            <div class="pages">
-                <h2 class="jheading">
-                    <%= headings[i] %>
-                </h2>
-                <h3 class="jrnl">
-                    <%= journals[i] %>
-                </h3>
-            </div>
-            <% } %>
-                <!-- <table>
-            <% for (var i=0; i<headings.length; i++){ %>
-                <tr>
-                    <td>
-                        <span class="jheading">
-                            <%= headings[i] %>
-                        </span>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <span class="jrnl">
-                            <%= journals[i] %>
-                        </span>
-                    </td>
-                </tr>
-                <% } %>
+            <% console.log(headings[i],headings.length) %>
+                <div class="pages">
+                    <h2 class="jheading">
+                        <%= headings[i] %>
+                    </h2>
+                    <h3 class="jrnl">
+                        <%= journals[i] %>
+                    </h3>
+                    <% } %>
+                </div>
+                <div class="csubmit">
+                    <a href="/compose"> <button id="compose_button">Compose</button></a>
+                </div>
 
-        </table> -->
+                <%- include("footer") -%>
+
 </body>
-<!-- <%- include("footer") -%> -->
+
 
 </html>
