--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -7,14 +7,16 @@
                 placeholder="Write Your Journal Here."></textarea><br>
             <button type="submit" class="com_form">Publish</button>
         </form>
+
     </div>
+    <%- include("footer") -%>
 
 
 
 
 
 
-    <!-- <table class="ctable">
+        <!-- <table class="ctable">
         <form action="/" method="post">
             <tr>
                 <td>
